force-app/main/default/objects/AdvancedShipment__c/fields/Exchange_Rate_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exchange Rate Confirmed</label>
    <type>Checkbox</type>
</CustomField>