force-app/main/default/objects/AdvancedShipment__c/fields/Exchange_RateBuying_Partner__c.field-meta.xml
<CustomField>
    <fullName>Exchange_RateBuying_Partner__c</fullName>
    <label>Exchange Rate(Buying)-Partner</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>