force-app/main/default/objects/AdvancedShipment__c/fields/Exchange_RateSelling_Forwarding__c.field-meta.xml
<CustomField>
    <fullName>Exchange_RateSelling_Forwarding__c</fullName>
    <label>Exchange Rate(Selling)-Forwarding</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>