force-app/main/default/objects/AdvancedShipment__c/fields/Extra_cost_not_approved__c.field-meta.xml
<CustomField>
    <fullName>Extra_cost_not_approved__c</fullName>
    <label>Extra cost not approved</label>
    <summaryFilterItems>
        <field>ConsolBill__c.Billing_status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>ConsolBill__c.ConsolidationShipmentName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>