force-app/main/default/objects/AdvancedShipment__c/fields/Feeder__c.field-meta.xml
<CustomField>
    <fullName>Feeder__c</fullName>
    <label>Feeder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>