force-app/main/default/objects/AdvancedShipment__c/fields/FileNo__c.field-meta.xml
<CustomField>
    <fullName>FileNo__c</fullName>
    <label>File No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>