force-app/main/default/objects/AdvancedShipment__c/fields/Freight_Term__c.field-meta.xml
<CustomField>
    <fullName>Freight_Term__c</fullName>
    <label>Freight Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Prepaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>