force-app/main/default/objects/AdvancedShipment__c/fields/HDS__c.field-meta.xml
<CustomField>
    <fullName>HDS__c</fullName>
    <label>HDS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>