force-app/main/default/objects/AdvancedShipment__c/fields/HouseBookingNo__c.field-meta.xml
<CustomField>
    <fullName>HouseBookingNo__c</fullName>
    <label>House Booking No</label>
    <type>TextArea</type>
</CustomField>