force-app/main/default/objects/AdvancedShipment__c/fields/HouseNotifyPartyDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>HouseNotifyPartyDetailInformation__c</fullName>
    <label>House Notify Party’s Detail Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>