force-app/main/default/objects/AdvancedShipment__c/fields/Incoterms__c.field-meta.xml
<CustomField>
    <fullName>Incoterms__c</fullName>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Incoterm</valueSetName>
    </valueSet>
</CustomField>