force-app/main/default/objects/AdvancedShipment__c/fields/Internal_Memo__c.field-meta.xml
<CustomField>
    <fullName>Internal_Memo__c</fullName>
    <label>Internal Memo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>