force-app/main/default/objects/AdvancedShipment__c/fields/Last_Referenced_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Referenced_Date__c</fullName>
    <label>Last Referenced Date</label>
    <type>DateTime</type>
</CustomField>