force-app/main/default/objects/AdvancedShipment__c/fields/LatePaymentDetails__c.field-meta.xml
<CustomField>
    <fullName>LatePaymentDetails__c</fullName>
    <label>Late Payment Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>