force-app/main/default/objects/AdvancedShipment__c/fields/LCL_Manifest_Submission_Time__c.field-meta.xml
<CustomField>
    <fullName>LCL_Manifest_Submission_Time__c</fullName>
    <label>LCL Manifest Submission Time</label>
    <type>DateTime</type>
</CustomField>