force-app/main/default/objects/AdvancedShipment__c/fields/Lock_Missing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Lock_Missing_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock (Missing Contract)</label>
    <type>Checkbox</type>
</CustomField>