force-app/main/default/objects/AdvancedShipment__c/fields/M_Consolidation_Type__c.field-meta.xml
<CustomField>
    <fullName>M_Consolidation_Type__c</fullName>
    <label>M-Consolidation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>