force-app/main/default/objects/AdvancedShipment__c/fields/MAgent__c.field-meta.xml
<CustomField>
    <fullName>MAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M-Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Advanced_Shipment2</relationshipName>
    <type>Lookup</type>
</CustomField>