force-app/main/default/objects/AdvancedShipment__c/fields/MarginProfitFCY__c.field-meta.xml
<CustomField>
    <fullName>MarginProfitFCY__c</fullName>
    <formula>(TotalSellingInclTaxFCY__c - TotalBuyingInclTaxFCY__c)/TotalSellingInclTaxFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Profit (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>