force-app/main/default/objects/AdvancedShipment__c/fields/MarginProfitLocal__c.field-meta.xml
<CustomField>
    <fullName>MarginProfitLocal__c</fullName>
    <formula>(TotalSellingInclTaxLocal__c - TotalBuyingInclTaxLocal__c)/TotalSellingInclTaxLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Profit (VND)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>