force-app/main/default/objects/AdvancedShipment__c/fields/Mass_Create_Consol_Billings__c.field-meta.xml
<CustomField>
    <fullName>Mass_Create_Consol_Billings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mass Create Consol Billings</label>
    <type>Checkbox</type>
</CustomField>