force-app/main/default/objects/AdvancedShipment__c/fields/Mass_Update_Billings__c.field-meta.xml
<CustomField>
    <fullName>Mass_Update_Billings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mass Update Billings</label>
    <type>Checkbox</type>
</CustomField>