force-app/main/default/objects/AdvancedShipment__c/fields/Master_AN_Received__c.field-meta.xml
<CustomField>
    <fullName>Master_AN_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master A/N Received</label>
    <type>Checkbox</type>
</CustomField>