force-app/main/default/objects/AdvancedShipment__c/fields/Master_Booking_No__c.field-meta.xml
<CustomField>
    <fullName>Master_Booking_No__c</fullName>
    <label>Master Booking No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>