force-app/main/default/objects/AdvancedShipment__c/fields/Master_Buying_Allocation_to_House__c.field-meta.xml
<CustomField>
    <fullName>Master_Buying_Allocation_to_House__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Buying Allocation to House</label>
    <type>Checkbox</type>
</CustomField>