force-app/main/default/objects/AdvancedShipment__c/fields/Master_Consolidator_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Master_Consolidator_Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Consolidator/Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Advanced_Shipment1</relationshipName>
    <type>Lookup</type>
</CustomField>