force-app/main/default/objects/AdvancedShipment__c/fields/Master_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_Type__c</fullName>
    <label>Master Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ocean Export</fullName>
            </value>
            <value>
                <fullName>Ocean Import</fullName>
            </value>
            <value>
                <fullName>Air Export</fullName>
                <isActive>false</isActive>
                <label>Air Export</label>
            </value>
            <value>
                <fullName>Air Import</fullName>
                <isActive>false</isActive>
                <label>Air Import</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>