force-app/main/default/objects/AdvancedShipment__c/fields/Master_Type__c.field-meta.xml
<CustomField>
    <fullName>Master_Type__c</fullName>
    <label>Master Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>