force-app/main/default/objects/AdvancedShipment__c/fields/MasterConsigneeDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>MasterConsigneeDetailInformation__c</fullName>
    <label>Master Consignee’s Detail Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>