force-app/main/default/objects/AdvancedShipment__c/fields/MasterNotifyPartyDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>MasterNotifyPartyDetailInformation__c</fullName>
    <label>Master Notify Party’s Detail Information</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>