force-app/main/default/objects/AdvancedShipment__c/fields/MBLorMAWBNumber__c.field-meta.xml
<CustomField>
    <fullName>MBLorMAWBNumber__c</fullName>
    <label>M B/L or M AWB Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>