force-app/main/default/objects/AdvancedShipment__c/fields/MBLType__c.field-meta.xml
<CustomField>
    <fullName>MBLType__c</fullName>
    <label>M B/L Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ORIGINAL</fullName>
            </value>
            <value>
                <fullName>SURRENDERED</fullName>
            </value>
            <value>
                <fullName>WAYBILL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>