force-app/main/default/objects/AdvancedShipment__c/fields/MConsignee__c.field-meta.xml
<CustomField>
    <fullName>MConsignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Advanced_Shipment4</relationshipName>
    <type>Lookup</type>
</CustomField>