force-app/main/default/objects/AdvancedShipment__c/fields/MConsolidatorCarrierDetailInfor__c.field-meta.xml
<CustomField>
    <fullName>MConsolidatorCarrierDetailInfor__c</fullName>
    <label>M.Consolidator/Carrier Detail Infor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>