force-app/main/default/objects/AdvancedShipment__c/fields/MeasurementCBM__c.field-meta.xml
<CustomField>
    <fullName>MeasurementCBM__c</fullName>
    <label>Measurement(CBM)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>