force-app/main/default/objects/AdvancedShipment__c/fields/MNotifyParty__c.field-meta.xml
<CustomField>
    <fullName>MNotifyParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M-Notify Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Advanced_Shipment5</relationshipName>
    <type>Lookup</type>
</CustomField>