force-app/main/default/objects/AdvancedShipment__c/fields/Money_Collected__c.field-meta.xml
<CustomField>
    <fullName>Money_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Money Collected</label>
    <type>Checkbox</type>
</CustomField>