force-app/main/default/objects/AdvancedShipment__c/fields/Month_ETD__c.field-meta.xml
<CustomField>
    <fullName>Month_ETD__c</fullName>
    <formula>TEXT(MONTH(ETD__c))+&apos;+&apos;+ TEXT(YEAR(ETD__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month ETD</label>
    <type>Text</type>
</CustomField>