force-app/main/default/objects/AdvancedShipment__c/fields/Mother_Vessel_Voyage__c.field-meta.xml
<CustomField>
    <fullName>Mother_Vessel_Voyage__c</fullName>
    <label>Mother Vessel/ Voyage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>