force-app/main/default/objects/AdvancedShipment__c/fields/MShipper__c.field-meta.xml
<CustomField>
    <fullName>MShipper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipper</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Advanced_Shipment3</relationshipName>
    <type>Lookup</type>
</CustomField>