force-app/main/default/objects/AdvancedShipment__c/fields/Number_in_Month__c.field-meta.xml
<CustomField>
    <fullName>Number_in_Month__c</fullName>
    <formula>VALUE(IF( ISBLANK(FileNo__c),&apos;0&apos; ,RIGHT(FileNo__c,3)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number in Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>