force-app/main/default/objects/AdvancedShipment__c/fields/Number_of_House_BL__c.field-meta.xml
<CustomField>
    <fullName>Number_of_House_BL__c</fullName>
    <label>Number of House B/L</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>