force-app/main/default/objects/AdvancedShipment__c/fields/NumberMonth__c.field-meta.xml
<CustomField>
    <fullName>NumberMonth__c</fullName>
    <label>Number Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>