force-app/main/default/objects/AdvancedShipment__c/fields/NumberofContainer__c.field-meta.xml
<CustomField>
    <fullName>NumberofContainer__c</fullName>
    <label>Number of Container</label>
    <summaryForeignKey>ConsolCNTR__c.AdvancedShipment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>