force-app/main/default/objects/AdvancedShipment__c/fields/NumberofSellingBilling__c.field-meta.xml
<CustomField>
    <fullName>NumberofSellingBilling__c</fullName>
    <label>Number of Selling-Billing</label>
    <summaryFilterItems>
        <field>ConsolBill__c.CurrencySelling__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>ConsolBill__c.ConsolidationShipmentName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>