force-app/main/default/objects/AdvancedShipment__c/fields/Oversea_Local_Charge_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Oversea_Local_Charge_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oversea Local Charge Confirmed</label>
    <type>Checkbox</type>
</CustomField>