force-app/main/default/objects/AdvancedShipment__c/fields/Pickup_Order_Receipt_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Order_Receipt_Confirmed__c</fullName>
    <label>Pickup Order Receipt Confirmed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>