force-app/main/default/objects/AdvancedShipment__c/fields/PLStatus__c.field-meta.xml
<CustomField>
    <fullName>PLStatus__c</fullName>
    <label>PL Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not yet</fullName>
                <default>true</default>
                <label>Not yet</label>
            </value>
            <value>
                <fullName>Send to Salesman</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>