force-app/main/default/objects/AdvancedShipment__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) + CASESAFEID(MPOD__r.Id), MPOD__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POD</label>
    <type>Text</type>
</CustomField>