force-app/main/default/objects/AdvancedShipment__c/fields/POL__c.field-meta.xml
<CustomField>
    <fullName>POL__c</fullName>
    <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) + CASESAFEID(MPOL__r.Id), MPOL__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POL</label>
    <type>Text</type>
</CustomField>