force-app/main/default/objects/AdvancedShipment__c/fields/Pre_Alert_to_CFS_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Pre_Alert_to_CFS_Warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Alert to CFS Warehouse</label>
    <type>Checkbox</type>
</CustomField>