force-app/main/default/objects/AdvancedShipment__c/fields/Print_Date__c.field-meta.xml
<CustomField>
    <fullName>Print_Date__c</fullName>
    <label>Print Date</label>
    <type>Date</type>
</CustomField>