force-app/main/default/objects/AdvancedShipment__c/fields/ProfitINCLTaxActual__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCLTaxActual__c</fullName>
    <label>Profit INCL Tax (Actual)</label>
    <summarizedField>ConsolBill__c.ProfitINCLTaxActual__c</summarizedField>
    <summaryForeignKey>ConsolBill__c.ConsolidationShipmentName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>