force-app/main/default/objects/AdvancedShipment__c/fields/ProfitINCLTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCLTaxFCY__c</fullName>
    <label>Profit INCL Tax (USD)</label>
    <summarizedField>ConsolBill__c.ProfitINCLTaxFCY__c</summarizedField>
    <summaryForeignKey>ConsolBill__c.ConsolidationShipmentName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>