force-app/main/default/objects/AdvancedShipment__c/fields/ProfitINCLTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCLTaxLocal__c</fullName>
    <label>Profit INCL Tax (VND)</label>
    <summarizedField>ConsolBill__c.ProfitINCLTaxVND__c</summarizedField>
    <summaryForeignKey>ConsolBill__c.ConsolidationShipmentName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>