force-app/main/default/objects/AdvancedShipment__c/fields/RailWaybillNumber__c.field-meta.xml
<CustomField>
    <fullName>RailWaybillNumber__c</fullName>
    <label>Rail Waybill Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>