force-app/main/default/objects/AdvancedShipment__c/fields/ReasonForCancellation__c.field-meta.xml
<CustomField>
    <fullName>ReasonForCancellation__c</fullName>
    <label>Reason For Cancellation</label>
    <type>TextArea</type>
</CustomField>