force-app/main/default/objects/AdvancedShipment__c/fields/Roll_up_cargo_quantity__c.field-meta.xml
<CustomField>
    <fullName>Roll_up_cargo_quantity__c</fullName>
    <label>Roll up cargo quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>