force-app/main/default/objects/AdvancedShipment__c/fields/Roll_up_CBM__c.field-meta.xml
<CustomField>
    <fullName>Roll_up_CBM__c</fullName>
    <label>Roll up CBM</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>