force-app/main/default/objects/AdvancedShipment__c/fields/Roll_up_GW__c.field-meta.xml
<CustomField>
    <fullName>Roll_up_GW__c</fullName>
    <label>Roll up G.W</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>