force-app/main/default/objects/AdvancedShipment__c/fields/RollupCargoQuantity__c.field-meta.xml
<CustomField>
    <fullName>RollupCargoQuantity__c</fullName>
    <label>Rollup Cargo Quantity</label>
    <summarizedField>ConsolCNTR__c.Cargo_Quantity__c</summarizedField>
    <summaryForeignKey>ConsolCNTR__c.AdvancedShipment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>