force-app/main/default/objects/AdvancedShipment__c/fields/RollupCBM__c.field-meta.xml
<CustomField>
    <fullName>RollupCBM__c</fullName>
    <label>Rollup CBM</label>
    <summarizedField>ConsolCNTR__c.MeasurementCBM__c</summarizedField>
    <summaryForeignKey>ConsolCNTR__c.AdvancedShipment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>