force-app/main/default/objects/AdvancedShipment__c/fields/RollupGrossWeight__c.field-meta.xml
<CustomField>
    <fullName>RollupGrossWeight__c</fullName>
    <label>Rollup Gross Weight</label>
    <summarizedField>ConsolCNTR__c.Gross_WeightKg__c</summarizedField>
    <summaryForeignKey>ConsolCNTR__c.AdvancedShipment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>