force-app/main/default/objects/AdvancedShipment__c/fields/SalesmanforPLApprovement__c.field-meta.xml
<CustomField>
    <fullName>SalesmanforPLApprovement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales man for PL Approvement</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>