force-app/main/default/objects/AdvancedShipment__c/fields/SellingBillingReceived__c.field-meta.xml
<CustomField>
    <fullName>SellingBillingReceived__c</fullName>
    <label>Selling-Billing Received</label>
    <summaryFilterItems>
        <field>ConsolBill__c.PaymentConfirmedSelling__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ConsolBill__c.ConsolidationShipmentName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>