force-app/main/default/objects/AdvancedShipment__c/fields/Shipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Type__c</fullName>
    <label>Shipment Type (not use)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consol</fullName>
            </value>
            <value>
                <fullName>FCL</fullName>
            </value>
            <value>
                <fullName>LCL</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>