force-app/main/default/objects/AdvancedShipment__c/fields/Shipper_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Name__c</fullName>
    <formula>MShipper__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Name</label>
    <type>Text</type>
</CustomField>