force-app/main/default/objects/AdvancedShipment__c/fields/ShipperDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>ShipperDetailInformation__c</fullName>
    <label>Shipper’s Detail Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>