force-app/main/default/objects/AdvancedShipment__c/fields/ShippingInformation__c.field-meta.xml
<CustomField>
    <fullName>ShippingInformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Information</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipName>Advanced_Shipment</relationshipName>
    <type>Lookup</type>
</CustomField>