force-app/main/default/objects/AdvancedShipment__c/fields/ShowPopupflow__c.field-meta.xml
<CustomField>
    <fullName>ShowPopupflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Pop up flow</label>
    <type>Checkbox</type>
</CustomField>