force-app/main/default/objects/AdvancedShipment__c/fields/SI_Closing_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SI_Closing_DateTime__c</fullName>
    <label>S/I Closing Date/Time</label>
    <type>DateTime</type>
</CustomField>