force-app/main/default/objects/AdvancedShipment__c/fields/Task_stage__c.field-meta.xml
<CustomField>
    <fullName>Task_stage__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Task stage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>