force-app/main/default/objects/AdvancedShipment__c/fields/Teus__c.field-meta.xml
<CustomField>
    <fullName>Teus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teus</label>
    <referenceTo>TEUs__c</referenceTo>
    <relationshipName>Advanced_Shipment</relationshipName>
    <type>Lookup</type>
</CustomField>