force-app/main/default/objects/AdvancedShipment__c/fields/Total_Kickback_Total_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Kickback_Total_Profit__c</fullName>
    <formula>TotalKickbackVND__c -  TotalProfitExcludeKB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Kickback - Total Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>