force-app/main/default/objects/AdvancedShipment__c/fields/Total_Teus__c.field-meta.xml
<CustomField>
    <fullName>Total_Teus__c</fullName>
    <label>Total Teus</label>
    <summarizedField>ConsolCNTR__c.Teus__c</summarizedField>
    <summaryForeignKey>ConsolCNTR__c.AdvancedShipment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>